2008-06-03  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* configure.in: Changed bash'ism (if [...]) to more general code
	(if test ...).

2008-05-25  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* Version 1.22.16.

2008-05-25  Christian Vogelgsang  <chris@vogelgsang.org>

	* configure.in: honor OBJCFLAGS if available. added Carbon lib
	for Cocoa linking.

	* build/Makefile.am, build/macosx/build-vice-release.sh: added
	build-vice-release script

	* Makefile.am: make bindist on Macs need the bash

	* data/C64/Makefile.am, data/C64/osx_sym_de.vkm,
	data/C64/osx_pos.vkm, data/C64/osx_sym_us.vkm: fixed Cocoa key
	maps

2008-05-19  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* autogen.sh: Removed "bash-ism" from script (compare with "=="
	instead of "=").

2008-05-19  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* depcomp, missing, aclocal.m4, po/stamp-cat-id, po/vice.pot,
	po/fr.gmo, po/nl.gmo, po/pl.gmo, po/hu.gmo, po/it.gmo,
	po/de.gmo, po/sv.gmo: Removed some more auto-generated or
	unnecessary files.

2008-05-18  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* Version 1.22.15.

2008-05-16  Marco van den Heuvel  <blackystardust68@yahoo.com>

	* doc/html/Makefile.am, doc/Makefile.am: Changed the way the
	docdir is dealt with, old way made some autotools versions end
	up with an error.

2008-05-13  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>

	* autogen.sh: generates (almost) all files which can be
	auto-generated. Exceptions: Files which are needed for platforms
	which cannot built them themselves, or which are deliberately
	changed from the auto-generated forms. These files are:
	config.guess, config.sub (deliberately changed), and
	src/monitor/mon_parse.c, src/monitor/mon_parse.h,
	src/monitor/mon_lex.c (their absense would break compilation for
	some platforms).

	* src/config.h.in, doc/texinfo.tex, po/cat-id-tbl.c,
	*/Makefile.in: removed files which can be auto-generated.

2008-05-07  Spiro Trikaliotis  <spiro.trikaliotis@gmx.de>
